--- a/static/base.scss
+++ b/static/base.scss
@@ -12,6 +12,9 @@
   .two-px-border {
     text-shadow: 2px 2px 2px rgba(0,0,0,0.5);
   }
+  .tiramisushadow {
+    text-shadow: 0px 0px 4px rgb(25 25 25)
+  }
   .my50 {
     margin-top: 50%;
     margin-bottom: 50%;
