some checks and "cleanups"

--- a/static/base.scss
+++ b/static/base.scss
@@ -167,46 +167,6 @@ h1{font-weight:300}
 th {
   white-space: nowrap;
 }
-  .loader-wrapper {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #fff;
-  display:flex;
-  justify-content: center;
-  align-items: center;
-  }
-  .loader {
-  display: inline-block;
-  width: 30px;
-  height: 30px;
-  position: relative;
-  border: 4px solid #02064a;
-  animation: loader 2s infinite ease;
-  }
-  .loader-inner {
-  vertical-align: top;
-  display: inline-block;
-  width: 100%;
-  background-color: #fff;
-  animation: loader-inner 2s infinite ease-in;
-  }
-  @keyframes loader {
-  0% { transform: rotate(0deg);}
-  25% { transform: rotate(180deg);}
-  50% { transform: rotate(180deg);}
-  75% { transform: rotate(360deg);}
-  100% { transform: rotate(360deg);}
-  }
-  @keyframes loader-inner {
-  0% { height: 0%;}
-  25% { height: 0%;}
-  50% { height: 100%;}
-  75% { height: 100%;}
-  100% { height: 0%;}
-  }
 
 .tiramisubg {
   background-color:#ffffff;
@@ -216,8 +176,6 @@ th {
     -45deg
     , rgb(167 114 79), rgb(167 114 79) 100px, transparent 0px, transparent 200px );
 }
-
-
 
 /*                  ,,                          
                  `7MM                          
@@ -243,7 +201,7 @@ YM.    , YA.   ,A9 MM YA.   ,A9 MM     L.   I8
 .aqua { color: #5ff }
 .red { color: #f55 }
 .light_purple, .pink { color: #f5f }
-.yellow, .YELLOW { color: #ff0; text-shadow: 0 0 3px #000000;}
+.yellow, .YELLOW { color: #dede1b;}
 .white { color: #fff }
 
 .chocolate {background-image:linear-gradient(to right,tomato,coral,gold,lawngreen,steelblue,blueviolet,orchid);-webkit-background-clip:text;-webkit-text-fill-color:transparent}
