--- a/templates/404.html
+++ b/templates/404.html
@@ -2,7 +2,7 @@
 
 <head>
 	{% block head %}
-		<title>{{error}} - All the tiramisu is gone!</title>
+		<title>{{error}} - All the tiramisu is gone! | tiramisu</title>
 	{% endblock %}
 </head>
 
@@ -13,13 +13,11 @@
 		<div class="self-end">{{text}}</div>
 		<br>
 		<div class='self-end text-base text-right'>{{desc}}<br>
-		Click <a target='_blank' href="https://www.hongkiat.com/blog/common-http-errors/">here</a> to learn more.</div>
-	</div>
-	<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
-	<p>
 		{% if text == 'API timeout' %}
 		{{desc}} Check its status <a target='_blank' class='font-semibold' href="https://status.hypixel.net">here</a>.
 		{% endif %}
-	</p>
+		Click <a target='_blank' href="https://www.hongkiat.com/blog/common-http-errors/">here</a> to learn more.</div>
+	</div>
+	<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
 </div>
 {% endblock %}
