--- a/templates/index.html
+++ b/templates/index.html
@@ -25,6 +25,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Orienta&display=swap" rel="stylesheet">
 		<script src="https://kit.fontawesome.com/a6310495d7.js" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
 		
 		<!-- DESKTOP USERS -->
 		<div id='desktoplogo' class="grid grid-cols-4 sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow items-center">
@@ -45,8 +47,8 @@
 		<!-- MOBILE USERS -->
 		<div id='mobilelogo' class="flex flex-row flex-nowrap justify-between sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow items-center">
 			<a class='flex-none' href="/"><img class='h-12 w-auto ml-4 mr-1' src="https://raw.githubusercontent.com/gist/literaiiy/2afd8f09c3d91165dae55c951c76b025/raw/2363d9abacdfa0a3275745f50f81e7dc7b734c00/tiramisNewNoPadding.svg" alt="tiramisu logo but mobile"></a>
-			<form class='flex-shrink w-full p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-3 shadow' formnovalidate action="/" method="POST">
-				<input class='w-full py-3 outline-none h-full text-center' type="text" name="content" id="content" autofocus="autofocus" required='true' onfocus="this.select()" autocomplete="off" spellcheck="false" placeholder="Search...">
+			<form class='flex-shrink w-full p-1 bg-white px-0 text-gray-600 rounded-lg m-0 self-center relative mx-3 shadow' action="/" method="POST">
+				<input class='w-full py-3 outline-none h-full text-center' type="text" name="content" id="content" autofocus="autofocus" onfocus="this.select()" autocomplete="off" spellcheck="false" placeholder="Search...">
 				<button class="buttonModal absolute right-3 w-8 top-0 self-center focus:outline-none h-full" type="submit">
 					<svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"width="24" height="24"viewBox="0 0 50 50"style=" fill:#9FA6B2;"><path d="M 21 3 C 11.621094 3 4 10.621094 4 20 C 4 29.378906 11.621094 37 21 37 C 24.710938 37 28.140625 35.804688 30.9375 33.78125 L 44.09375 46.90625 L 46.90625 44.09375 L 33.90625 31.0625 C 36.460938 28.085938 38 24.222656 38 20 C 38 10.621094 30.378906 3 21 3 Z M 21 5 C 29.296875 5 36 11.703125 36 20 C 36 28.296875 29.296875 35 21 35 C 12.703125 35 6 28.296875 6 20 C 6 11.703125 12.703125 5 21 5 Z"></path></svg>
 				</button>
@@ -57,22 +59,6 @@
 					<span class='tooltiptext'>Sorry, English (US) is the only currently available language. More coming soon!</span>
 				</button>
 			</div>
-		</div>
-
-			<!-- The Modal -->
-			<div id="myModal" class="modal">
-
-			<!-- Modal content -->
-			<div class="modal-content">
-				<span class="close">&times;</span>
-				<p>Some text in the Modal..</p>
-			</div>
-			<style>
-				.modal{display:none;position:fixed;z-index:1;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:#000;background-color:rgba(0,0,0,.4)}.modal-content{background-color:#fefefe;margin:15% auto;padding:20px;border:1px solid #888;width:80%}.close{color:#aaa;float:right;font-size:28px;font-weight:700}.close:focus,.close:hover{color:#000;text-decoration:none;cursor:pointer}
-			</style>
-			<script>
-				var modal=document.getElementById("myModal"),btn=document.getElementsByClassName("buttonModal"),span=document.getElementsByClassName("close")[0];btn.onclick=function(){modal.style.display="block"},span.onclick=function(){modal.style.display="none"},window.onclick=function(n){n.target==modal&&(modal.style.display="none")};
-			</script>
 		</div>
 	</head>
 
@@ -99,7 +85,7 @@
 			<div class='sm:col-span-1 sm:text-3xl lg:col-start-2 lg:col-end-10 rounded-2xl text-4xl font-black p-6 shadow text-center tiramisubg tiramisushadow text-gray-100'>Welcome to tiramisu!</div>
 			<div class="sm:col-span-1 lg:col-start-2 lg:col-end-10 bg-gray-100 rounded-2xl p-6 shadow divide-y divide-gray-300">
 				<p>
-					<i>tiramisu</i> is a Hypixel player statistics site that gives a comprehensive outlook on your Minecraft account and Hypixel profile- complete name history, detailed breakdowns of your Hypixel statistics (including an elaborate analysis of your SkyWars and BedWars stats), among other things. It is currently in an open beta, and there are bound to be a lot of bugs, but I am actively working on resolving these bugs and improving the experience tiramisu provides.
+					<i>tiramisu</i> is a Hypixel player statistics site that gives a comprehensive outlook on your Minecraft account and Hypixel profile- complete name history, detailed breakdowns of your Hypixel statistics (including an elaborate analysis of your SkyWars and BedWars stats), among other things. It is currently in open beta, and there are bound to be a lot of bugs, but I am actively working on resolving these bugs and improving the experience tiramisu provides.
 				</p>
 			</div>
 			<div class="sm:col-span-1 lg:col-start-2 lg:col-end-6 bg-gray-100 rounded-2xl p-6 shadow divide-y divide-gray-300">
