google tag manager, meta description change, etc.

--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -12,7 +12,7 @@
     <hr>
     <br>
     <p>
-        This webpage describes the Personal Information (with "PI" as an alias) that is collected when the User uses tiramisu or any other literaiiy service. This policy applies sitewide.
+        This webpage describes the Personal Information (with "PI" as an alias) that is collected when the User uses tiramisu (tiramisu.vip) or any other literaiiy service. This policy applies sitewide.
     </p>
     <br>
     <div class="text-2xl">How personal data is used</div>
