--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 	{% endblock %}
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="tiramisu">
+		<meta name="description" content="tiramisu is a Hypixel player statistics site that gives a comprehensive outlook on your Minecraft account and Hypixel profile with name history and game stats.">
 		<meta name="keywords" content="tiramisu, hypixel, minecraft">
 		<meta name="author" content="literaiiy">
 		<meta property="og:title" content="tiramisu" />
@@ -27,6 +27,15 @@
 		<script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.js"></script>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-modal/0.9.1/jquery.modal.min.css" />
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-8XFN8MJEB2"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-8XFN8MJEB2');
+		</script>
 		
 		<!-- DESKTOP USERS -->
 		<div id='desktoplogo' class="grid grid-cols-4 sticky top-0 bg-gray-100 mb-8 z-40 w-full shadow items-center">
