--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="literaiiy">
 		<meta property="og:title" content="tiramisu" />
 		<meta property="og:type" content="website" />
-		<meta property="og:image" content="https://raw.githubusercontent.com/gist/literaiiy/a5151734080232985c55f7753dcc417d/raw/fa23a4507d1e34da1579afd26719cc47297153da/tiramisuFullText.svg"/>
+		<meta property="og:image" content="https://i.ibb.co/cQv5mkS/tiramisu-Full-Text.png"/>
 		<meta property="og:url" content='https://tiramisu.vip' />
 		<meta property="og:description" content="tiramisu is a Hypixel player statistics site that gives a comprehensive outlook on your Minecraft account and Hypixel profile with name history and game stats." />
 		<link href="{{ url_for('static', filename='tailwind.css') }}" rel="stylesheet" type="text/css">
