OpenGraph title change

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		<meta name="description" content="tiramisu is a Hypixel player statistics site that gives a comprehensive outlook on your Minecraft account and Hypixel profile with name history and game stats.">
 		<meta name="keywords" content="tiramisu, hypixel, minecraft">
 		<meta name="author" content="literaiiy">
-		<meta property="og:title" content="tiramisu" />
+		<meta property="og:title" content="tiramisu - Hypixel Player Stats Analysis & Name History" />
 		<meta property="og:type" content="website" />
 		<meta property="og:image" content="https://i.ibb.co/cQv5mkS/tiramisu-Full-Text.png"/>
 		<meta property="og:url" content='https://tiramisu.vip' />
