--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,7 @@
 {% block head %}
 <head>
     <title>Profile for {{ username }} | tiramisu</title>
+    <meta property="og:title" content="{{username}}'s profile on tiramisu" />
 </head>
 {% endblock %}
 
