DANGEROUS: Purging tailwind.css - changing from static to build for most files - some other bugfixes relating to production crap

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,8 +1,8 @@
 {% extends "index.html" %}
 {% block head %}
 <head>
-    <title>Profile for {{ username }} | tiramisu</title>
-    <meta property="og:title" content="{{username}}'s Profile on tiramisu" />
+    <title>{{ username }}'s profile | tiramisu</title>
+    <meta property="og:title" content="{{username}}'s profile | tiramisu" />
 </head>
 {% endblock %}
 
@@ -95,7 +95,7 @@
 
         <!------ PLAYER IMAGE ------>
         <div class="sm:col-span-1 lg:col-span-1 md:col-span-2 lg:col-start-6 image justify-self-center text-center">
-            <img src='https://mc-heads.net/body/{{uuid}}'>
+            <img src='https://mc-heads.net/body/{{uuid}}' alt="{{username}}'s skin">
             <br>
             <a class='underline' href="https://mc-heads.net/download/{{uuid}}">Download skin</a>
         </div>
@@ -1454,8 +1454,8 @@
             <div id='guild' class="sm:col-span-1 md:col-start-3 md:col-span-8 lg:col-start-2 lg:colend-10 bg-gray-100 rounded-2xl text-4xl p-6 shadow font-semibold text-center bg-gradient-to-r from-blue-900 to-pink-900 text-white two-px-border">No guild</div>
         {% endif %}
         </div>
-    <script src='/static/table.js'></script>
-    <script src='/static/tabs.js'></script>
-    <script src='/static/toc.js'></script>
+    <script src='/build/js/table.js'></script>
+    <script src='/build/js/tabs.js'></script>
+    <script src='/build/js/toc.js'></script>
 </body>
 {% endblock %}
