--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -5,6 +5,7 @@
 {% block content %}
 <head>
     <title>Privacy Policy | tiramisu</title>
+    <meta property="og:title" content="Privacy Policy | tiramisu" />
 </head>
 <div class='flex-1 grid grid-cols-1 sm:py-2 sm:px-4 md:py-4 md:py-4 lg:py-10 lg:px-20 sm:leading-1 md:leading-3 lg:leading-10'>
     <div class="text-4xl font-semibold">Privacy Policy</div>
