--- a/templates/user404.html
+++ b/templates/user404.html
@@ -4,6 +4,7 @@
     {% block head %}
         <head>
             <title>{{q}} doesn't exist | tiramisu</title>
+            <meta property="og:title" content="{{q}} doesn't exist | tiramisu" />
         </head>
     {% endblock %}
     
