--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,7 @@
 <head>
 	{% block head %}
 		<title>{{error}} - All the tiramisu is gone! | tiramisu</title>
+		<meta property="og:title" content="404 - All the tiramisu is gone! | tiramisu" />
 	{% endblock %}
 </head>
 
@@ -18,6 +19,6 @@
 		{% endif %}
 		Click <a target='_blank' href="https://www.hongkiat.com/blog/common-http-errors/">here</a> to learn more.</div>
 	</div>
-	<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg"/>
+	<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg" alt='404, oops'/>
 </div>
 {% endblock %}
