MAYBE: I think I "fixed" it

--- a/templates/base.html
+++ b/templates/base.html
@@ -1454,8 +1454,8 @@
             <div id='guild' class="sm:col-span-1 md:col-start-3 md:col-span-8 lg:col-start-2 lg:colend-10 bg-gray-100 rounded-2xl text-4xl p-6 shadow font-semibold text-center bg-gradient-to-r from-blue-900 to-pink-900 text-white two-px-border">No guild</div>
         {% endif %}
         </div>
-    <script src='/build/js/table.js'></script>
-    <script src='/build/js/tabs.js'></script>
-    <script src='/build/js/toc.js'></script>
+    <script src='/static/table.js'></script>
+    <script src='/static/tabs.js'></script>
+    <script src='/static/toc.js'></script>
 </body>
 {% endblock %}
