--- a/templates/index.html
+++ b/templates/index.html
@@ -200,7 +200,7 @@
 					<i>Last updated on May 2nd, 2021</i>
 				</div>
 			</div>
-			<script src='/build/js/table.js'></script>
+			<script src='/static/table.js'></script>
 		</main>
 	{% endblock %}
 
