some SEO optimization, other changes

--- a/templates/404.html
+++ b/templates/404.html
@@ -19,6 +19,6 @@
 		{% endif %}
 		Click <a target='_blank' href="https://www.hongkiat.com/blog/common-http-errors/">here</a> to learn more.</div>
 	</div>
-	<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg" alt='404, oops'/>
+	<img class='h-auto py-5' src="https://i.ibb.co/5L5qKfd/pigcake.jpg" alt='tiramisu 404, oops'/>
 </div>
 {% endblock %}
