--- a/templates/base.html
+++ b/templates/base.html
@@ -234,7 +234,7 @@
                     <i class="fab fa-discord"></i> <a href='https://discord.com' target='_blank' class="discord"><b>Discord</b></a>: <a class='link' href='https://{{ discord }}' target='_blank'>{{ discord }}</a><br>
                 {% endif %}
                 {% if hypixelForums != [] %}
-                    <img src="https://raw.githubusercontent.com/gist/literaiiy/ef8dcabfe98d9beafd6c303fe2bc4b7f/raw/6a7fccbc4262cc15478f520bd4677c7d6d6484a9/htopixel%20(1).svg" alt="hypixel logo" style='height:1rem;float:left;margin-right:0.5rem;'> <a href='https://hypixel.net/forums' target='_blank' class="hypixelForums"><b>Hypixel Forums</b></a>: <a class='link' href='{{ hypixelForums[1] }}' target='_blank'>@{{ hypixelForums[0] }}</a><br>
+                    <img src="https://raw.githubusercontent.com/gist/literaiiy/ef8dcabfe98d9beafd6c303fe2bc4b7f/raw/6a7fccbc4262cc15478f520bd4677c7d6d6484a9/htopixel%20(1).svg" alt="tiramisu svg hypixel logo" style='height:1rem;float:left;margin-right:0.5rem;'> <a href='https://hypixel.net/forums' target='_blank' class="hypixelForums"><b>Hypixel Forums</b></a>: <a class='link' href='{{ hypixelForums[1] }}' target='_blank'>@{{ hypixelForums[0] }}</a><br>
                 {% endif %}
                 {% if youtube != [] %}
                     <i class="fab fa-youtube"></i> <a href='https://youtube.com' target='_blank' class="youtube"><b>YouTube</b></a>: <a class='link' href='{{ youtube[1] }}' target='_blank'>{{ youtube[0] }}</a><br>
