--- a/templates/privacy.html
+++ b/templates/privacy.html
@@ -40,7 +40,7 @@
     <br>
     <div class="text-2xl">Contact</div>
     <p>
-        This website is operated by literaiiy (Minecraft username may differ) at <a class='underline' target='_blank' href="https://literaiiy.me">literaiiy.me</a>. If any further questions arise, please feel free to contact me at <a class='underline' href="mailto:admin@literaiiy.me">admin[a]literaiiy.me</a>, where the [a] would be replaced with an @. 
+        This website is operated by literaiiy (Minecraft username may differ) at <a class='underline' target='_blank' href="https://literaiiy.me">literaiiy.me</a>. If any further questions arise, please feel free to contact me at <a class='underline' href="mailto:literaiiy@tiramisu.vip">literaiiy[a]tiramisu.vip</a>, where the [a] would be replaced with an @. 
     </p>
     <br>
     <i>Last updated April 22, 2021</i>
