namehis color fix

--- a/templates/base.html
+++ b/templates/base.html
@@ -80,7 +80,7 @@
                             {% elif value == namehis[0]['name'] %}
                                 <td><a href="/p/{{ value }}" style="text-decoration:none;color:#004D55" >{{ value }}</a></td>
                             {% elif value == namehis[namehis|length-1]['name'] %}
-                                <td><a class="nhfirst" href="/p/{{ value }}" style="text-decoration:none;color:#00D7EF">{{ value }}</a></td>
+                                <td><a class="nhfirst" href="/p/{{ value }}" style="text-decoration:none;color:#64d2de">{{ value }}</a></td>
                             {% elif value in dict_item['name'] %}
                                 <td><a class="nhmiddle" href="/p/{{ value }}" style="text-decoration:none;color:#0092A2" >{{ value }}</a></td>
                             {% else %}
