text between some lines

--- a/templates/base.html
+++ b/templates/base.html
@@ -62,7 +62,7 @@
 
         <!--- NAME HISTORY --->
         <div class=' sm:col-span-1 md:col-start-3 md:col-end-8 namehistable lg:col-start-2 lg:col-span-4 bg-gray-100 p-6 rounded-2xl shadow overflow-scroll overflow-y-auto overflow-x-auto'>
-            <table id="table_id" class="compact hover">
+            <table id="table_id" class="row-border compact hover">
                 <thead>
                     <tr>
                         <th>#</th>
