--- a/templates/index.html
+++ b/templates/index.html
@@ -99,7 +99,7 @@
 				<div class="text-3xl font-semibold pb-5">Player Counts</div>
 				<div class='pt-5'>
 					{% if totalPlayers != -1 %}
-						<table id='playercount' class='hover compact'>
+						<table id='playercount' class='row-border hover compact'>
 							<thead>
 								<tr>
 									<th>#</th>
