--- a/static/base.scss
+++ b/static/base.scss
@@ -271,7 +271,7 @@ table.dataTable thead .sorting_desc_disabled{background-image:url("./images/sort
 table.dataTable tbody tr{background-color:transparent}
 
 table.dataTable tbody th,table.dataTable tbody td{padding:8px 10px}
-table.dataTable.row-border tbody th,table.dataTable.row-border tbody td,table.dataTable.display tbody th,table.dataTable.display tbody td{border-top:1px solid #ddd}
+table.dataTable.row-border tbody th,table.dataTable.row-border tbody td,table.dataTable.display tbody th,table.dataTable.display tbody td{border-top:1px solid #e7e7e7}
 table.dataTable.row-border tbody tr:first-child th,table.dataTable.row-border tbody tr:first-child td,table.dataTable.display tbody tr:first-child th,table.dataTable.display tbody tr:first-child td{border-top:0}
 
 table.dataTable.cell-border tbody tr:first-child th,table.dataTable.cell-border tbody tr:first-child td{border-top:0}
