--- a/templates/index.html
+++ b/templates/index.html
@@ -207,7 +207,7 @@
 	{% block footer %}
 	<footer class='w-full bg-gray-100 shadow-md mt-5 p-8'>
 		<p>tiramisu <b>v0.6δ "Caffè" (Open Beta)</b> · May 10th, 2021<!-- <a class='no-underline text-gray-500' target='_blank' href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> <b>v1.1.2</b> · <a class='no-underline text-gray-500' target='_blank' href="https://python.org">Python</a> <b>v3.7.9</b><p> -->
-		<p>Copyright © 2021 <a href="https://literaiiy.me" class='no-underline' target='_blank'>literaiiy</a> (<a class='no-underline text-gray-500' href='/p/pankaik'>pankaik</a>). All rights reserved. <a class='no-underline text-gray-500' href="/privacy">Privacy Policy</a>. Powered by <a class='no-underline text-gray-500' target='_blank' href="https://heroku.com">Heroku</a>. Times in UTC.</p>
+		<p>Copyright © 2021 literaiiy (pankaik). All rights reserved. <a class='no-underline text-gray-500' href="/privacy">Privacy Policy</a>. Powered by <a class='no-underline text-gray-500' target='_blank' href="https://heroku.com">Heroku</a>. Times in UTC.</p>
 	</footer>
 	{% endblock %}
 </body>
