--- a/templates/index.html
+++ b/templates/index.html
@@ -207,7 +207,7 @@
 	{% block footer %}
 	<footer class='w-full bg-gray-100 shadow-md mt-5 p-8'>
 		<p>tiramisu <b>v0.6.1δ "Caffè" (Open Beta)</b> · Mar 13th, 2022<!-- <a class='no-underline text-gray-500' target='_blank' href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> <b>v1.1.2</b> · <a class='no-underline text-gray-500' target='_blank' href="https://python.org">Python</a> <b>v3.7.9</b><p> -->
-		<p>Copyright © 2022 literaiiy (pankaik). All rights reserved. <a class='no-underline text-gray-500' href="/privacy">Privacy Policy</a>. Powered by <a class='no-underline text-gray-500' target='_blank' href="https://heroku.com">Heroku</a>. Times in UTC.</p>
+		<p>Copyright © 2022 <a href="https://ethany.im">pankaik.</a> All rights reserved. <a class='no-underline text-gray-500' href="/privacy">Privacy Policy</a>. Powered by <a class='no-underline text-gray-500' target='_blank' href="https://heroku.com">Heroku</a>. Times in UTC.</p>
 	</footer>
 	{% endblock %}
 </body>
