--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 			function gtag(){dataLayer.push(arguments);}
 			gtag('js', new Date());
 
-			gtag('config', 'G-8XFN8MJEB2');
+			gtag('config', 'G-8XFN8MJEB2', { 'anonymize_ip': true });
 		</script>
 		
 		<!-- DESKTOP USERS -->
