--- a/templates/index.html
+++ b/templates/index.html
@@ -171,7 +171,7 @@
 					</p>
 					<p>
 						<b>Are you stealing my data?</b>
-						<li>Also- no. This is covered in the <a href="/privacy">Privacy Policy</a>. I don't take any personally identifiable information, or share anything with third parties.</li>
+						<li>Also- no. This is covered in the <a href="/privacy">Privacy Policy</a>. I neither take personally identifiable information nor share anything with third parties.</li>
 					</p>
 					<p>
 						<b>Why don't you have (this feature)?</b>
@@ -183,11 +183,11 @@
 					</p>
 					<p>
 						<b>Why is there a '>' symbol in front of my first name's duration had?</b>
-						<li>Mojang doesn't provide an account's creation date in the API, so if an account's Hypixel join date is before their first name change, it will be used as a substitute for a pseudo account creation date. This means that number is almost certainly not an accurate figure.</li>
+						<li>Mojang doesn't provide an account's creation date in the API, so if an account's Hypixel join date is before their first name change, it will be used as a substitute for a pseudo account creation date. Almost certainly, the number is not an accurate figure.</li>
 					</p>
 					<p>
 						<b>What is the "Hypixel ____" on my profile?</b>
-						<li>The title is entirely based on how long you have been playing on the server- or more accurately, the amount of time since your first login.</li>
+						<li>The title is entirely based on how long you have been playing on the server— or more accurately, the amount of time since your first login.</li>
 					</p>
 					<p>
 						<b>Why don't the player counts instantly update every time I refresh?</b>
@@ -197,7 +197,7 @@
 						<b>Why can't I search for a name I've previously had?</b>
 						<li>At some point in November of 2020, Mojang stopped support for querying a UUID to receive a username at a certain timestamp, making it impossible to find a player's current name from a previous one. Sorry about that. Source: <a href="https://wiki.vg/Mojang_API">Mojang API Documentation</a>. See <a href="https://bugs.mojang.com/browse/WEB-3367">this ticket</a> for more information on the topic.</li>
 					</p>
-					<i>Last updated on May 2nd, 2021</i>
+					<i>Last updated on Aug 1st, 2022</i>
 				</div>
 			</div>
 			<script src='/static/table.js'></script>
@@ -206,7 +206,7 @@
 
 	{% block footer %}
 	<footer class='w-full bg-gray-100 shadow-md mt-5 p-8'>
-		<p>tiramisu <b>v0.6.1δ "Caffè" (Open Beta)</b> · Mar 13th, 2022<!-- <a class='no-underline text-gray-500' target='_blank' href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> <b>v1.1.2</b> · <a class='no-underline text-gray-500' target='_blank' href="https://python.org">Python</a> <b>v3.7.9</b><p> -->
+		<p>tiramisu <b>v0.6.1.1δ "Caffè" (Open Beta)</b> · Aug 1st, 2022<!-- <a class='no-underline text-gray-500' target='_blank' href="https://flask.palletsprojects.com/en/1.1.x/">Flask</a> <b>v1.1.2</b> · <a class='no-underline text-gray-500' target='_blank' href="https://python.org">Python</a> <b>v3.7.9</b><p> -->
 		<p>Copyright © 2022 <a href="https://ethany.im">pankaik.</a> All rights reserved. <a class='no-underline text-gray-500' href="/privacy">Privacy Policy</a>. Powered by <a class='no-underline text-gray-500' target='_blank' href="https://heroku.com">Heroku</a>. Times in UTC.</p>
 	</footer>
 	{% endblock %}
